--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Import fonts -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,700&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Appedu</title>
+    <title>赫綵設計學院—政府補助產業人才培訓</title>
   </head>
   <body data-spy="scroll" data-target=".navbar">
 
@@ -319,12 +319,12 @@
      <!-- footer -->
      <footer class="page-footer text-white bg-dark pt-5 pb-2">
        <div class="container">
-         <div class="row mb-2">
-           <div class="col-3 mr-auto">
+         <div class="row mb-2 d-flex justify-content-center">
+           <div class="col-lg-3 col-md-5 m-2">
              <img src="./images/logo-light.svg" class="w-100 mb-2" alt="logo">
              <img src="./images/tel-light.svg" class="w-100 my-3" alt="logo">
 
-             <div class="icons">
+             <div class="icons mb-2">
                  <a class="mr-1" href="https://www.facebook.com/appedu/" target="_blank"><img src="./images/fb-light.svg" alt="" id="fb"></a>
                  <a class="mr-1" href="https://line.me/ti/p/%40ksn8716p" target="_blank"><img src="./images/line-light.svg" alt="" id="line"></a>
                  <a href="https://www.youtube.com/user/AppeduDesignTraining" target="_blank"><img src="./images/yt-light.svg" alt="" id="youtube"></a>
