--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
                <h1>
-                 <img src="./images/hero-heading.svg" class="img-fluid my-2" alt="Responsive image">
+                 <img src="./images/heroheading.svg" class="img-fluid my-2" alt="Responsive image">
                </h1>
                 <img src="./images/80to100.svg" class="img-fluid mb-3" alt="Responsive image">
                 <br>
