--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-nav">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="main-nav">
+        <div class="collapse navbar-collapse ml-auto" id="main-nav">
         <ul class="navbar-nav mr-auto my-lg-0">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-info">課綱內容</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-location">地點時間</a></li>
