--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="main-nav">
-        <ul class="navbar-nav mr-auto my-lg-0">
+        <ul class="navbar-nav ml-auto my-lg-0">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-info">課綱內容</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-location">地點時間</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#class-join">我要報名</a></li>
@@ -34,11 +34,8 @@
        <div class="container align-items-stretch min-vh-100">
          <div class="row d-flex align-items-center justify-content-end">
              <div class="col-lg-5 col-md-5 col-xm-12 text-center text-primary">
-
                <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
-               <h1>
-                 <img src="./images/heroheading.svg" class="img-fluid my-2" alt="Responsive image">
-               </h1>
+               <h1><img src="./images/heroheading.svg" class="img-fluid hero-heading" alt="Hero-Heading"></h1>
                 <img src="./images/80to100.svg" class="img-fluid mb-3" alt="Responsive image">
                 <br>
                 <button type="button" class="btn btn-primary btn-lg btn-block">立即申請</button>
