--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="navbar-nav ml-auto my-lg-0">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-info">課綱內容</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-location">地點時間</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#class-join">我要報名</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-join">我要報名</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#questions">報名資格</a></li>
         </ul>
       </div>
@@ -36,7 +36,7 @@
              <div class="col-lg-5 col-md-5 col-xm-12 text-center text-primary">
                <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
                <h1><img src="./images/heroheading.svg" class="img-fluid hero-heading" alt="Hero-Heading"></h1>
-                <img src="./images/80to100.svg" class="img-fluid mb-3" alt="Responsive image">
+                <img src="./images/80to100.svg" class="img-fluid" alt="Responsive image">
                 <br>
                 <button type="button" class="btn btn-primary btn-lg btn-block">立即申請</button>
 
@@ -52,7 +52,8 @@
          <div class="row d-flex justify-content-center">
             <div class="pop-info-box">
               <div class="col-lg-12 text-center p-lg-5 p-md-3 p-sm-2">
-                <h3><span>勞動部就業安定基金補助 </span>電腦培訓課程 350 hr</h3>
+                <img class="mr-2" src="./images/flag.svg" alt="">
+                <h3 class="align-middle d-inline"><span>勞動部就業安定基金補助 </span>電腦培訓課程 350 hr</h3>
                 <h2 class="display-2 font-weight-bold">商用多媒體網頁設計班</h2>
               </div>
             </div>
@@ -68,7 +69,7 @@
            <h2 class="font-weight-bold section-heading">課綱內容</h2>
          </div>
          <div class="row">
-           <div class="col-lg-5 text-center">
+           <div class="col-lg-5 text-center align-self-center">
              <img class="img-fluid" src="./images/team.svg" alt="">
            </div>
 
@@ -169,8 +170,8 @@
        </div>
      </section>
 
-     <!-- Class-join -->
-     <section class="class-join bg-primary" id="class-join">
+     <!-- event-join -->
+     <section class="event-join bg-primary" id="event-join">
        <div class="container">
          <div class="row d-flex align-items-center">
            <div class="col-lg-5">
@@ -178,7 +179,7 @@
            </div>
 
            <!-- Join us Form -->
-           <div class="col-lg-7 overflow-hidden">
+           <div class="col-lg-7 overflow-hidden signup-form">
              <div class="col-md-10 mx-auto bg-light shadow-lg mt-5 p-4 mb-n1 rounded">
                     <h2 class="text-center font-weight-bold">限30名！快速卡位報名！</h2>
                     <p class="form__text text-center mt-2">填寫資料，讓專人為你詳細解說政府補助問題。</p>
@@ -203,28 +204,7 @@
                             <select id="selLiveArea" name="selLiveArea" class="form-control"><option value="">請選擇地區</option></select>
                         </div>
                     </div>
-                    <div class="row mt-3">
-                        <div class="col-md-6">
-                            <select id="selSubCourseName" name="selSubCourseName" class="form-control">
-                                <option value="">課程六選一</option>
-                                <option value="平面視覺設計">平面視覺設計</option>
-                                <option value="數位繪畫">數位繪畫</option>
-                                <option value="2D動畫設計">2D動畫設計</option>
-                                <option value="前端網頁設計">前端網頁設計</option>
-                                <option value="UI介面設計">UI介面設計</option>
-                                <option value="室內設計實務">室內設計實務</option>
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <select id="selGifts" name="selGifts" class="form-control">
-                                <option value="">從哪裡得知資訊</option>
-                                <option value="赫綵官網">赫綵官網</option>
-                                <option value="Facebook">Facebook</option>
-                                <option value="Instagram">Instagram</option>
-                                <option value="其他">其他</option>
-                            </select>
-                        </div>
-                    </div>
+
                     <div class="row my-3">
                         <div class="col mx-auto text-center">
                             <div class="form-check">
@@ -305,7 +285,7 @@
                 </div>
               </div>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 align-self-center">
               <img class="img-fluid" src="./images/question.svg" alt="">
             </div>
 
@@ -316,20 +296,16 @@
      <!-- footer -->
      <footer class="page-footer text-white bg-dark pt-5 pb-2">
        <div class="container">
-         <div class="row mb-2 d-flex justify-content-center">
-           <div class="col-lg-3 col-md-5 m-2">
+         <div class="row mb-2 d-flex justify-content-center align-items-center text-lg-left text-sm-center">
+           <div class="col">
              <img src="./images/logo-light.svg" class="w-100 mb-2" alt="logo">
+           </div>
+           <div class="col">
              <img src="./images/tel-light.svg" class="w-100 my-3" alt="logo">
-
-             <div class="icons mb-2">
-                 <a class="mr-1" href="https://www.facebook.com/appedu/" target="_blank"><img src="./images/fb-light.svg" alt="" id="fb"></a>
-                 <a class="mr-1" href="https://line.me/ti/p/%40ksn8716p" target="_blank"><img src="./images/line-light.svg" alt="" id="line"></a>
-                 <a href="https://www.youtube.com/user/AppeduDesignTraining" target="_blank"><img src="./images/yt-light.svg" alt="" id="youtube"></a>
-             </div>
 
            </div>
 
-           <div class="col-8">
+           <div class="lg-col-9 md-col-1 mx-3">
              主辦單位保留活動與課程大綱異動之權利，最新資訊以活動網站為主。<br>
                新北市政府職業訓練中心 委託辦理 核准文號: 109年3月18日 新北職訓字第1094711911號函。
            </div>
