--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
        <div class="container align-items-stretch min-vh-100">
          <div class="row d-flex align-items-center justify-content-end">
              <div class="col-lg-5 col-md-5 col-xm-12 text-center text-primary">
-               <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
+               <h3 class="d-inline highlighted font-weight-bold">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
                <h1><img src="./images/heroheading.svg" class="img-fluid hero-heading" alt="Hero-Heading"></h1>
-                <img src="./images/80to100.svg" class="img-fluid" alt="Responsive image">
+                <img style="margin-left:15px;" src="./images/80to100.svg" class="img-fluid" alt="Responsive image">
                 <br>
-                <button type="button" class="btn btn-primary btn-lg btn-block">立即申請</button>
+                <button type="button" class="btn btn-danger mt-3 btn-lg btn-block">立即申請</button>
 
              </div>
 
@@ -83,9 +83,24 @@
                     </svg>
                     <h3 class="my-lg-3">平面設計</h3>
                       <ul>
-                        <li>Illustrator 教學</li>
-                        <li>PhotoShop 合成海報</li>
-                        <li>企業識別系統</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          Illustrator 教學</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          PhotoShop 合成海報</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          企業識別系統</li>
                       </ul>
                     </div>
                 </div>
@@ -98,9 +113,23 @@
                     </svg>
                     <h3 class="my-lg-3">影像編輯</h3>
                       <ul>
-                        <li>攝影概論</li>
-                        <li>AE 影視特效</li>
-                        <li>2D 動畫概論</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          攝影概論</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>AE 影視特效</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          2D 動畫概論</li>
                       </ul>
                     </div>
                 </div>
@@ -112,9 +141,24 @@
                     </svg>
                     <h3 class="my-lg-3">網頁設計</h3>
                       <ul>
-                        <li>HTML/CSS概論</li>
-                        <li>Javascript網頁語法</li>
-                        <li>RWD網頁設計</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          HTML/CSS概論</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          Javascript網頁語法</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          RWD網頁設計</li>
                       </ul>
                     </div>
                 </div>
@@ -127,9 +171,24 @@
                     </svg>
                     <h3 class="my-lg-3">求職徵才</h3>
                       <ul>
-                        <li>作業系統認識</li>
-                        <li>履歷+勞動法令+求職</li>
-                        <li>兩性座談+行銷技巧</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          作業系統認識</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          履歷+勞動法令+求職</li>
+                        <li>
+                          <svg class="mb-1 bi bi-check-box" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"/>
+                          </svg>
+                          兩性座談+行銷技巧</li>
                       </ul>
                     </div>
                 </div>
@@ -146,9 +205,9 @@
          <div class="row d-flex justify-content-center">
            <h2 class="font-weight-bold section-heading">地點時間</h2>
          </div>
-         <div class="row">
-           <div class="col-md-6">
-             <ul class="list-group list-group-flush">
+         <div class="row d-flex justify-content-center">
+           <div class="col-lg-5">
+             <ul class="list-group">
                 <li class="list-group-item"><h4>訓練期間</h4>5/18-7/17  350 hr</li>
                 <li class="list-group-item"><h4>報名期間</h4>即日期至 5/8</li>
                 <li class="list-group-item"><h4>招生人數</h4>限30人</li>
@@ -156,9 +215,8 @@
               </ul>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-lg-5">
               <ul class="list-group list-group-flush">
-
                  <li class="list-group-item"><h4>考試日期</h4>5/12 筆試+口試</li>
                  <li class="list-group-item"><h4>入選公告</h4>5/15 下午4:00</li>
                  <li class="list-group-item"><h4>負擔費用</h4>$ 5,699  80% 補助</li>
@@ -180,14 +238,14 @@
 
            <!-- Join us Form -->
            <div class="col-lg-7 overflow-hidden signup-form">
-             <div class="col-md-10 mx-auto bg-light shadow-lg mt-5 p-4 mb-n1 rounded">
+             <div class="col-md-10 mx-auto bg-light shadow-lg mt-5 p-5 mb-n1 rounded">
                     <h2 class="text-center font-weight-bold">限30名！快速卡位報名！</h2>
                     <p class="form__text text-center mt-2">填寫資料，讓專人為你詳細解說政府補助問題。</p>
                     <div class="row mt-4">
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-sm-2">
                             <input type="text" class="form-control" placeholder="真實姓名" id="txtName" name="txtName">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-sm-2">
                             <input type="tel" class="form-control" placeholder="聯絡電話" id="txtCellPhone" name="txtCellPhone">
                         </div>
                     </div>
@@ -197,10 +255,10 @@
                         </div>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-sm-2">
                             <select id="selLiveCity" name="selLiveCity" class="form-control"><option value="">請選擇縣市</option><option value="1">臺北市</option><option value="2">基隆市</option><option value="3">新北市</option><option value="4">宜蘭縣</option><option value="5">新竹市</option><option value="6">新竹縣</option><option value="7">桃園市</option><option value="8">苗栗縣</option><option value="9">臺中市</option><option value="10">彰化縣</option><option value="11">南投縣</option><option value="12">嘉義市</option><option value="13">嘉義縣</option><option value="14">雲林縣</option><option value="15">臺南市</option><option value="16">高雄市</option><option value="17">澎湖縣</option><option value="18">屏東縣</option><option value="19">臺東縣</option><option value="20">花蓮縣</option><option value="21">金門縣</option><option value="22">連江縣</option></select>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-sm-2">
                             <select id="selLiveArea" name="selLiveArea" class="form-control"><option value="">請選擇地區</option></select>
                         </div>
                     </div>
@@ -231,20 +289,20 @@
        <div class="container">
          <div class="row">
             <div class="col-lg-6 p-3">
-                <h2 class="font-weight-bold section-heading">報名資格Q & A</h2>
+                <h2 class="font-weight-bold section-heading">報名資格 Q&A</h2>
                 <div class="accordion" id="faqExample">
                     <div class="card">
                         <div class="card-header p-2" id="headingOne">
                             <h5 class="mb-0">
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                  Q：報名時需要繳交那些文件？
+                                  報名時需要繳交那些文件？
                                 </button>
                               </h5>
                         </div>
 
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#faqExample">
                             <div class="card-body">
-                                <b>Answer:</b> 身分證(正反面影本)、勞保明細表(正本)、1吋相片2張，具「非自願離職身分」者必須繳交「職訓推介單」，具「長期失業者身分」者必須繳交開訓日前一個月內之「求職登記證明文件」，其他具有特定對象身分之報名民眾請檢附相關證明文件資料，不齊或欠缺者，不予接受報名。
+                              身分證(正反面影本)、勞保明細表(正本)、1吋相片2張，具「非自願離職身分」者必須繳交「職訓推介單」，具「長期失業者身分」者必須繳交開訓日前一個月內之「求職登記證明文件」，其他具有特定對象身分之報名民眾請檢附相關證明文件資料，不齊或欠缺者，不予接受報名。
                             </div>
                         </div>
                     </div>
@@ -253,7 +311,7 @@
 
                             <h5 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                              Q：100%補助資格？
+                              100%補助資格？
                             </button>
                           </h5>
                         </div>
@@ -272,7 +330,7 @@
                         <div class="card-header p-2" id="headingThree">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                  Q：80%補助資格？
+                                  80%補助資格？
                                 </button>
                               </h5>
                         </div>
@@ -305,7 +363,7 @@
 
            </div>
 
-           <div class="lg-col-9 md-col-1 mx-3">
+           <div class="footer-info lg-col-9 md-col-1 mx-3">
              主辦單位保留活動與課程大綱異動之權利，最新資訊以活動網站為主。<br>
                新北市政府職業訓練中心 委託辦理 核准文號: 109年3月18日 新北職訓字第1094711911號函。
            </div>
