--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <div class="container align-items-stretch min-vh-100">
          <div class="row d-flex align-items-center justify-content-end">
              <div class="col-lg-5 col-md-5 col-xm-12 text-center text-primary">
-               <h3 class="d-inline highlighted font-weight-bold">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
+               <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
                <h1><img src="./images/heroheading.svg" class="img-fluid hero-heading" alt="Hero-Heading"></h1>
                 <img style="margin-left:15px;" src="./images/80to100.svg" class="img-fluid" alt="Responsive image">
                 <br>
@@ -242,24 +242,24 @@
                     <h2 class="text-center font-weight-bold">限30名！快速卡位報名！</h2>
                     <p class="form__text text-center mt-2">填寫資料，讓專人為你詳細解說政府補助問題。</p>
                     <div class="row mt-4">
-                        <div class="col-md-6 mb-sm-2">
+                        <div class="col-md-6 mb-sm-2 mb-1">
                             <input type="text" class="form-control" placeholder="真實姓名" id="txtName" name="txtName">
                         </div>
                         <div class="col-md-6 mb-sm-2">
                             <input type="tel" class="form-control" placeholder="聯絡電話" id="txtCellPhone" name="txtCellPhone">
                         </div>
                     </div>
-                    <div class="row mt-3">
+                    <div class="row mt-3 my-1">
                         <div class="col-md-12">
                             <input type="email" class="form-control" placeholder="電子信箱" id="txtEMail" name="txtEMail">
                         </div>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-6 mb-sm-2">
+                        <div class="col-md-6 mb-sm-2 mb-1">
                             <select id="selLiveCity" name="selLiveCity" class="form-control"><option value="">請選擇縣市</option><option value="1">臺北市</option><option value="2">基隆市</option><option value="3">新北市</option><option value="4">宜蘭縣</option><option value="5">新竹市</option><option value="6">新竹縣</option><option value="7">桃園市</option><option value="8">苗栗縣</option><option value="9">臺中市</option><option value="10">彰化縣</option><option value="11">南投縣</option><option value="12">嘉義市</option><option value="13">嘉義縣</option><option value="14">雲林縣</option><option value="15">臺南市</option><option value="16">高雄市</option><option value="17">澎湖縣</option><option value="18">屏東縣</option><option value="19">臺東縣</option><option value="20">花蓮縣</option><option value="21">金門縣</option><option value="22">連江縣</option></select>
                         </div>
                         <div class="col-md-6 mb-sm-2">
-                            <select id="selLiveArea" name="selLiveArea" class="form-control"><option value="">請選擇地區</option></select>
+                            <input type="email" class="form-control" placeholder="請輸入地區" id="txtEMail" name="selLiveArea">
                         </div>
                     </div>
 
