--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
     <!-- Header -->
     <header class="hero" id="hero">
-       <div class="container align-items-stretch min-vh-100">
+       <div class="container align-items-stretch h-100">
          <div class="row d-flex align-items-center justify-content-end">
              <div class="col-lg-5 col-md-5 col-xm-12 text-center text-primary wow fadeInUp">
                <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
                <h1><img src="./images/heroheading.svg" class="img-fluid hero-heading" alt="Hero-Heading"></h1>
                 <img style="margin-left:15px;" src="./images/80to100.svg" class="img-fluid" alt="Responsive image">
                 <br>
-                <button type="button" class="btn btn-danger mt-3 btn-lg btn-block" href="#event-join">立即申請</button>
+                <a type="button" class="btn btn-danger mt-3 btn-lg btn-block" href="#event-join">立即申請</a>
 
              </div>
 
