--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                <h1><img src="./images/heroheading.svg" class="img-fluid hero-heading" alt="Hero-Heading"></h1>
                 <img style="margin-left:15px;" src="./images/80to100.svg" class="img-fluid" alt="Responsive image">
                 <br>
-                <a type="button" class="btn btn-danger mt-3 btn-lg btn-block" href="#event-join">立即申請</a>
-
+                <a class="btn btn-danger btn-lg btn-block mt-3" href="#event-join">立即申請</a>
              </div>
 
          </div>
@@ -276,9 +275,29 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 mx-auto text-center">
-                          <button type="button" class="btn btn-primary btn-lg btn-block">確認送出</button>
+                          <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#ModalSend">
+                            確認送出
+                          </button>
+                          <!-- Popup -->
+                          <div class="modal fade" id="ModalSend" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title" id="exampleModalLongTitle">表格填寫完畢</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                  感謝您的幫助~我們會盡快與您聯繫。
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
 
-                          <!-- <a href="#" class="btn-submit" name="btnsubmit" id="btnsubmit" value="確認送出">確認送出</a> -->
                         </div>
                     </div>
                 </div>
