--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
      <!-- footer -->
      <footer class="page-footer text-white bg-dark wow fadeInUp pt-5 pb-2">
        <div class="container">
-         <div class="row mb-2 d-flex justify-content-center align-items-center text-lg-left text-sm-center">
+         <div class="row mb-2 d-flex justify-content-center align-items-center text-sm-center">
            <div class="col">
              <img src="./images/logo-light.svg" class="w-100 mb-2" alt="logo">
            </div>
@@ -385,7 +385,7 @@
 
            </div>
 
-           <div class="footer-info lg-col-9 md-col-1 mx-3">
+           <div class="footer-info col-lg-6 col-md-5 text-md-left mx-3">
              主辦單位保留活動與課程大綱異動之權利，最新資訊以活動網站為主。<br>
                新北市政府職業訓練中心 委託辦理 核准文號: 109年3月18日 新北職訓字第1094711911號函。
            </div>
