--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body data-spy="scroll" data-target=".navbar">
 
     <!-- Main Navgation -->
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top shadow p-3 mb-5 py-3" id="mainNav">
+    <nav class="navbar navbar-expand-sm fixed-top shadow p-3 mb-5 py-3" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="https://www.appedu.com.tw/">
             <img src="./images/logo-light.svg" width="200" height="50" alt="logo-light">
@@ -50,7 +50,7 @@
 
      <!-- Pop-info -->
      <section class="pop-info wow bounceInUp" id="pop-info">
-       <div class="container justify-content-center bg-primary text-white shadow-lg rounded py-3">
+       <div class="container justify-content-center bg-primary text-white shadow-lg rounded mt-lg-n5 mt-md-n2 py-3">
          <div class="row d-flex justify-content-center">
             <div class="pop-info-box">
               <div class="col-lg-12 text-center p-lg-5 p-md-3 p-sm-2">
@@ -282,18 +282,13 @@
                           <div class="modal fade" id="ModalSend" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
                               <div class="modal-content">
-                                <div class="modal-header">
-                                  <h5 class="modal-title" id="exampleModalLongTitle">表格填寫完畢</h5>
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                  </button>
-                                </div>
+
                                 <div class="modal-body">
+                                  <h2>完成填單</h2>
+                                  <br>
                                   感謝您的幫助~我們會盡快與您聯繫。
                                 </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉</button>
-                                </div>
+
                               </div>
                             </div>
                           </div>
