--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body data-spy="scroll" data-target=".navbar">
 
     <!-- Main Navgation -->
-    <nav class="navbar navbar-expand-sm fixed-top shadow p-3 mb-5 py-3" id="mainNav">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark shadow p-3 mb-5 py-3" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="https://www.appedu.com.tw/">
             <img src="./images/logo-light.svg" width="200" height="50" alt="logo-light">
@@ -34,7 +34,7 @@
 
     <!-- Header -->
     <header class="hero" id="hero">
-       <div class="container align-items-stretch h-100">
+       <div class="container align-items-stretch">
          <div class="row d-flex align-items-center justify-content-end">
              <div class="col-lg-5 col-md-5 col-xm-12 text-center text-primary wow fadeInUp">
                <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
