--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
     <!-- Header -->
     <header class="hero" id="hero">
-       <div class="container align-items-stretch">
+       <div class="container">
          <div class="row d-flex align-items-center justify-content-end">
              <div class="col-lg-5 col-md-5 col-xm-12 text-center text-primary wow fadeInUp">
                <h3 class="d-inline highlighted">產業人才培訓<span class="font-italic">350<small>hr</small></span></h3>
                <h1><img src="./images/heroheading.svg" class="img-fluid hero-heading" alt="Hero-Heading"></h1>
                 <img style="margin-left:15px;" src="./images/80to100.svg" class="img-fluid" alt="Responsive image">
                 <br>
-                <a class="btn btn-danger btn-lg btn-block mt-3" href="#event-join">立即申請</a>
+                <a class="btn btn-danger btn-lg btn-block mt-4" href="#event-join">立即申請</a>
              </div>
 
          </div>
@@ -50,7 +50,7 @@
 
      <!-- Pop-info -->
      <section class="pop-info wow bounceInUp" id="pop-info">
-       <div class="container justify-content-center bg-primary text-white shadow-lg rounded mt-lg-n5 mt-md-n2 py-3">
+       <div class="container justify-content-center bg-primary text-white shadow-lg rounded mt-lg-n5 mt-md-n2 mt-sm-0 py-3">
          <div class="row d-flex justify-content-center">
             <div class="pop-info-box">
               <div class="col-lg-12 text-center p-lg-5 p-md-3 p-sm-2">
