--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
      </section>
 
      <!-- event-info -->
-     <section class="event-info py-5 wow fadeInUp" id="event-info">
+     <span class="anchor" id="event-info"></span>
+     <section class="event-info py-5 wow fadeInUp">
        <div class="container">
-         <div class="row d-flex justify-content-center text-center">
+         <div class="row d-flex justify-content-center pt-5 text-center">
            <h2 class="font-weight-bold section-heading">課綱內容</h2>
          </div>
          <div class="row">
@@ -202,7 +203,8 @@
       </section>
 
      <!-- event-location -->
-     <section class="event-location wow fadeInUp" id="event-location">
+     <span class="anchor" id="event-location"></span>
+     <section class="event-location wow fadeInUp">
        <div class="container">
          <div class="row d-flex justify-content-center">
            <h2 class="font-weight-bold section-heading">地點時間</h2>
@@ -231,7 +233,8 @@
      </section>
 
      <!-- event-join -->
-     <section class="event-join bg-primary wow fadeInUp" id="event-join">
+     <span class="anchor" id="event-join"></span>
+     <section class="event-join bg-primary wow fadeInUp">
        <div class="container">
          <div class="row d-flex align-items-center">
            <div class="col-lg-5">
@@ -306,7 +309,8 @@
      </section>
 
      <!-- Q&A -->
-     <section class="questions wow fadeInUp" id="questions">
+     <span class="anchor" id="questions"></span>
+     <section class="questions wow fadeInUp">
        <div class="container">
          <div class="row">
             <div class="col-lg-6 p-3">
