--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="zh-Hant-TW">
   <head>
     <!-- Tracking code -->
     <!-- Facebook Pixel Code -->
@@ -497,11 +497,13 @@
   ></script>
 
   <script>
-  // Wow fadin animation
-  new WOW().init();
-
   // 需使用 <script> 包起來
       $(document).ready(function() {
+
+        // Wow fadin animation setup
+        new WOW().init();
+
+        // Form
         var $form = $("form.form-distribution");
         loadLocation({
           city: {
