--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
               <input name="outletSub" type="text" hidden value="213" />
               <input name="mediaSub" type="text" hidden value="668" />
               <input name="type" type="text" hidden value="Event" />
-              <input name="course" type="text" hidden value="none" />
-              
+              <input name="course" type="text" hidden value="商用多媒體網頁設計班" />
+
                <h2 class="text-center font-weight-bold">限30名！快速卡位報名！</h2>
                <p class="form__text text-center mt-2">填寫資料，讓專人為你詳細解說政府補助問題。</p>                 <div class="row mt-4">
                    <div class="col-md-6">
