--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
               <input name="outletSub" type="text" hidden value="213" />
               <input name="mediaSub" type="text" hidden value="668" />
               <input name="type" type="text" hidden value="Event" />
+              <input name="course" type="text" hidden value="商用多媒體網頁設計班" />
                <h2 class="text-center font-weight-bold">限30名！快速卡位報名！</h2>
                <p class="form__text text-center mt-2">填寫資料，讓專人為你詳細解說政府補助問題。</p>                 <div class="row mt-4">
                    <div class="col-md-6">
@@ -472,6 +473,7 @@
             })(window, document, 'script', 'dataLayer', 'GTM-K56ZZM');
             </script>
     <!-- End Google Tag Manager -->
+
 
 <!-- WOW Scroll animation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
