--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
               <div class="col-lg-12 text-center p-lg-5 p-md-3 p-sm-2">
                 <img class="mr-2" src="./images/flag.svg" alt="">
                 <h3 class="align-middle d-inline"><span>勞動部就業安定基金補助 </span>電腦培訓課程 350 hr</h3>
-                <h2 class="display-2 font-weight-bold">商用多媒體網頁設計班</h2>
+                <h2 class="display-3 font-weight-bold">商用多媒體網頁設計班</h2>
+                <span class="detail">新北市政府職業訓練中心  委託辦理  核准文號: 109年3月18日 新北職訓字第1094711911號函</span>
               </div>
             </div>
          </div>
