--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
          <div class="row d-flex justify-content-center">
             <div class="pop-info-box">
               <div class="col-lg-12 text-center p-lg-5 p-md-3 p-sm-2">
-                <img class="mr-2" src="./images/flag.svg" alt="">
-                <h3 class="align-middle d-inline"><span>勞動部就業安定基金補助 </span>電腦培訓課程 350 hr</h3>
-                <h2 class="display-3 font-weight-bold">商用多媒體網頁設計班</h2>
+                <img class="mr-2" src="./images/flag.svg" alt="flag">
+                <h3 class="align-middle d-inline"><span><wbr>勞動部<wbr>就業安定<wbr>基金補助<wbr> </span><wbr>電腦<wbr>培訓課程<wbr> 350 hr<wbr></h3>
+                <h2 class="display-3 mt-2 font-weight-bold">商用多媒體網頁設計班</h2>
                 <span class="detail">新北市政府職業訓練中心  委託辦理  核准文號: 109年3月18日 新北職訓字第1094711911號函</span>
               </div>
             </div>
@@ -430,7 +430,9 @@
        <div class="container">
          <div class="row mb-2 d-flex justify-content-center align-items-center text-sm-center">
            <div class="col">
-             <img src="./images/logo-light.svg" class="w-100 mb-2" alt="logo">
+             <a href="https://www.appedu.com.tw/">
+               <img src="./images/logo-light.svg" class="w-100 mb-2" alt="logo">
+             </a>
            </div>
            <div class="col">
              <img src="./images/tel-light.svg" class="w-100 my-3" alt="logo">
