--- a/index.html
+++ b/index.html
@@ -478,8 +478,6 @@
     <!-- End Google Tag Manager -->
 
 
-<!-- WOW Scroll animation -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <!-- Bootstrap Essential -->
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -495,12 +493,15 @@
     integrity="sha256-sPB0F50YUDK0otDnsfNHawYmA5M0pjjUf4TvRJkGFrI="
     crossorigin="anonymous"
   ></script>
+
 <!-- 引入串接腳本 -->
-  <script
-    type="text/javascript"
-    src="https://www.appedu.com.tw/Librarys/Scripts/distribution2020.js"
-    charset="UTF-8"
-  ></script>
+  <script type="text/javascript" src="js/distribution2020.js" charset="UTF-8"></script>
+
+<!-- WOW Scroll animation -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
+<!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
   <script>
   // 需使用 <script> 包起來
