--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
               <input name="mediaSub" type="text" hidden value="668" />
               <input name="type" type="text" hidden value="Event" />
               <input name="course" type="text" hidden value="商用多媒體網頁設計班" />
-               <h2 class="text-center font-weight-bold">限30名！快速卡位報名！</h2>
-               <p class="form__text text-center mt-2">填寫資料，讓專人為你詳細解說政府補助問題。</p>                 <div class="row mt-4">
+               <h2 class="text-center font-weight-bold">限30名享補助！再拿<span>萬元生活津貼</span>！</h2>
+               <p class="form__text text-center mt-2">讓你培養技能實現高薪夢想，補助資格將有專人電話通知。</p>                 <div class="row mt-4">
                    <div class="col-md-6">
                      <input type="text" class="form-control" placeholder="真實姓名" name="name" />
                    </div>
@@ -321,15 +321,14 @@
                    </div>
                  </div>
 
-                 <div class="row my-3">
-                   <div class="col-md-5 mx-auto text-center">
-                     <div class="form-check">
-                       <label class="form-check-label text-dark">
+                 <div class="row my-3 mx-auto">
+
+                       <label class="form-check-label text-dark mx-auto">
                          <input name="agreement" type="checkbox" class="form-check-input" />
                          我已詳細閱讀並同意<a href="https://www.appedu.com.tw/frame-privacy" target="_blank" class="text-primary"
                            >隱私權使用條款</a></label>
-                     </div>
-                   </div>
+
+
                  </div>
                  <div class="row">
                    <div class="col-md-6 mx-auto text-center">
@@ -344,11 +343,34 @@
        </div>
      </section>
 
+     <!-- Gift banner -->
+     <span class="anchor" id="gift-banner"></span>
+     <section class="gift-banner text-light wow fadeInUp">
+       <div class="container">
+         <div class="row">
+           <div class="col-lg-6 text-center align-self-center">
+             <h2 class="font-weight-bold display-4">贈送</h2>
+             <div class="gift-banner__box">
+               <h3 class="font-weight-bold">線上設計課程180堂！</h3>
+               <h4>你關心世界，我們關心你，<br>防疫不停學！免費線上學！</h4>
+             </div>
+           </div>
+           <div class="col-lg-6 align-self-center">
+             <img class="img-fluid" src="./images/study.svg" alt="">
+           </div>
+         </div>
+       </div>
+     </section>
+
      <!-- Q&A -->
      <span class="anchor" id="questions"></span>
      <section class="questions wow fadeInUp">
        <div class="container">
          <div class="row">
+           <div class="col-lg-6 align-self-center">
+             <img class="img-fluid" src="./images/question.svg" alt="">
+           </div>
+
             <div class="col-lg-6 p-3">
                 <h2 class="font-weight-bold section-heading">報名資格 Q&A</h2>
                 <div class="accordion" id="faqExample">
@@ -403,11 +425,6 @@
                     </div>
                 </div>
               </div>
-
-            <div class="col-lg-6 align-self-center">
-              <img class="img-fluid" src="./images/question.svg" alt="">
-            </div>
-
 </div>
        </div>
      </section>
